[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acc_native_jobs"
version = "0.1"
authors = [
  { name="Wrufesh S", email="wrufesh@gmail.com" },
]
description = "IIASA Accelerator Client"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    'celery[librabbitmq]==5.3.4',
    'kubernetes==29.0.0',
    'accli@git+https://github.com/iiasa/accli.git'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ['acc_worker', 'acc_worker.*']

[project.urls]
"Homepage" = "https://github.com/iiasa/accli"
"Bug Tracker" = "https://github.com/iiasa/accli/issues"